feat: WIP ai-server
