# ai-server/openapi/tools-github.yaml
@@ -6,24 +6,19 @@ info:
 servers:
     - url: https://turbo-spork-pjp6xjj4gpj3rqx-8080.app.github.dev
 paths:
-    /concatenateFiles:
-        post:
+    /github/tools:
+        get:
             summary: Concatenate files from a GitHub repository
             description: |
                 This endpoint concatenates all files from a specified GitHub repository URL and saves the concatenated content into a single file. 
                 It requires a GitHub token to be set in the environment variables for authentication.
-            requestBody:
-                required: true
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            properties:
-                                baseUrl:
-                                    type: string
-                                    description: The base URL of the GitHub repository.
-                            required:
-                                - baseUrl
+            parameters:
+                - in: query
+                  name: baseUrl
+                  required: true
+                  schema:
+                      type: string
+                  description: The base URL of the GitHub repository.
             responses:
                 '200':
                     description: Files successfully concatenated
